update buildme to create V2.zip
Signed-off-by: SergeySlice <sergey.slice@gmail.com>

--- a/CloverPackage/Makefile
+++ b/CloverPackage/Makefile
@@ -10,6 +10,9 @@ image iso: utils
 pkg installer:
 	@${SRCROOT}/makepkg
 
+zip archive:
+	@${SRCROOT}/makeV2
+
 slimpkg1:
 	@${SRCROOT}/makepkg --nothemes
 
