--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -1117,6 +1117,8 @@
 		<true/>
 		<key>ForceExitBootServices</key>
 		<false/>
+		<key>ForceOcWriteFlash</key>
+		<false/>
 		<key>MmioWhitelist</key>
 		<array>
 			<dict>
