--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -1184,6 +1184,8 @@
 		<false/>
 		<key>XhciPortLimit</key>
 		<false/>
+		<key>ProvideCurrentCpuInfo</key>
+		<false/>
 	</dict>
 </dict>
 </plist>
