wrong sample value fot HWTarget
Signed-off-by: SergeySlice <sergey.slice@gmail.com>

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -247,7 +247,7 @@
 		<key>MLB</key>
 		<string>C02032109R6DC771H</string>
 		<key>#HWTarget</key>
-		<string>j160</string>
+		<string>J160AP</string>
 		<key>Block</key>
 		<array>
 			<dict>
