--- a/BaseTools/Conf/tools_def.template
+++ b/BaseTools/Conf/tools_def.template
@@ -2523,6 +2523,7 @@ RELEASE_XCODE5_X64_ASM_FLAGS  = -arch x86_64
 # $(PLATFORM_FLAGS)
 
 RELEASE_XCODE5_X64_CC_FLAGS   = -target x86_64-pc-win32-macho -c -Os -Wall -Werror -Wextra -include AutoGen.h -funsigned-char -fno-ms-extensions -fno-stack-protector -fno-builtin -fshort-wchar -mms-bitfields -Wno-unused-parameter -Wno-missing-field-initializers -Wno-tautological-compare -Wno-sign-compare -DNO_MSABI_VA_FUNCS
+RELEASE_XCODE5_X64_CXX_FLAGS = -target x86_64-pc-win32-macho  -nostdinc -c -Os -Wall -Werror -Wextra -include AutoGen.h -fno-ms-extensions -fno-stack-protector -fno-builtin -fshort-wchar -mms-bitfields -Wno-unused-parameter -Wno-missing-field-initializers -Wno-tautological-compare -Wno-sign-compare -DNO_MSABI_VA_FUNCS -DSTRING_ARRAY_NAME=$(BASE_NAME)Strings 
 # -mno-implicit-float
 # -Wno-varargs
 # -Wno-unused-const-variable
