--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -157,6 +157,8 @@
                         <false/>
                         <key>Replace</key>
                         <data>SU1FSQ==</data>
+                        <key>Skip</key>
+                        <integer>0</integer>
                     </dict>
                 </array>
                 <key>Debug</key>
