--- a/Xcode/CloverConfigPlistValidator/CloverConfigPlistValidator.xcodeproj/xcshareddata/xcschemes/CloverConfigPlistValidator_Debug.xcscheme
+++ b/Xcode/CloverConfigPlistValidator/CloverConfigPlistValidator.xcodeproj/xcshareddata/xcschemes/CloverConfigPlistValidator_Debug.xcscheme
@@ -64,7 +64,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "--productname=zziMac18,1"
+            argument = "--productname=iMac18,1"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
