--- a/BaseTools/Conf/tools_def.template
+++ b/BaseTools/Conf/tools_def.template
@@ -2400,6 +2400,7 @@ RELEASE_GCC48_AARCH64_CC_FLAGS   = DEF(GCC48_AARCH64_CC_FLAGS) -Wno-unused-but-s
 ##################
 *_GCC53_X64_OBJCOPY_PATH         = DEF(GCC53_X64_PREFIX)objcopy
 *_GCC53_X64_CC_PATH              = DEF(GCC53_X64_PREFIX)gcc
+*_GCC53_X64_CXX_PATH              = DEF(GCC53_X64_PREFIX)g++
 *_GCC53_X64_SLINK_PATH           = DEF(GCC53_X64_PREFIX)gcc-ar
 *_GCC53_X64_DLINK_PATH           = DEF(GCC53_X64_PREFIX)gcc
 *_GCC53_X64_ASLDLINK_PATH        = DEF(GCC53_X64_PREFIX)gcc
